<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    tools:context="com.codepolitan.examplefirebaselogin.main.MainActivity"
    >

    <ImageView
        android:layout_width="130dp"
        android:layout_height="130dp"
        android:id="@+id/image_view_icon_firebase_activity_main"
        android:src="@drawable/ic_firebase"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_username_activity_main"
        android:hint="Username"
        android:imeOptions="actionNext"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/image_view_icon_firebase_activity_main"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/edit_text_password_activity_main"
        android:hint="Password"
        android:imeOptions="actionDone"
        android:maxLines="1"
        android:singleLine="true"
        android:textColor="@android:color/white"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:layout_below="@+id/edit_text_username_activity_main"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:inputType="textPassword"
        />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/activity_horizontal_margin"
        android:layout_marginLeft="@dimen/activity_horizontal_margin"
        android:id="@+id/button_login_activity_main"
        android:text="Login"
        android:layout_below="@id/edit_text_password_activity_main"
        android:textColor="@android:color/white"
        android:background="@drawable/background_button_orange"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/button_sign_up_activity_main"
        android:minWidth="0dp"
        android:minHeight="0dp"
        android:background="@drawable/background_text_view_create_account"
        android:textAllCaps="false"
        android:text="Create an account"
        android:textColor="@android:color/white"
        android:textSize="15sp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:paddingTop="10dp"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="10dp"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text_view_not_registered_activity_main"
        android:text="Not registered?"
        android:gravity="center"
        android:layout_above="@+id/button_sign_up_activity_main"
        android:layout_centerHorizontal="true"
        />

    <!-- for progress loading -->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_progress_activity_main"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:clickable="true"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>