<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_signup"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:orientation="vertical"
    tools:context="com.codepolitan.examplefirebaselogin.signup.SignupActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <TextView
            android:id="@+id/text_view_signup_activity_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:text="Sign up"
            android:textColor="@android:color/white"
            android:textSize="24sp" />

        <EditText
            android:id="@+id/edit_text_email_activity_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/text_view_signup_activity_signup"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:inputType="textEmailAddress"
            android:hint="Email"
            android:imeOptions="actionNext"
            android:maxLines="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true"
            android:textColor="@android:color/white" />

        <EditText
            android:id="@+id/edit_text_password_activity_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/edit_text_email_activity_signup"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:hint="Password"
            android:imeOptions="actionDone"
            android:inputType="textPassword"
            android:textColor="@android:color/white"
            android:maxLines="1"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:singleLine="true" />

        <Button
            android:id="@+id/button_next_activity_signup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="@drawable/background_button_orange_transparent"
            android:drawableEnd="@drawable/ic_navigate_next"
            android:drawableRight="@drawable/ic_navigate_next"
            android:minHeight="0dp"
            android:minWidth="0dp"
            android:paddingBottom="10dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="10dp"
            android:text="Next"
            android:textAllCaps="false"
            android:textColor="@color/colorAccent"
            android:textSize="24sp" />

    </RelativeLayout>

    <!--for progress loading-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/relative_layout_progress_activity_signup"
        android:background="@android:color/black"
        android:alpha="0.7"
        android:visibility="gone"
        >

        <ProgressBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            />

    </RelativeLayout>

</RelativeLayout>
