<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/coordinator_layout_fragment_new_data"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:background="@android:color/white"
    tools:context="com.codepolitan.examplefirebaselogin.dashboard.data.add.NewDataFragment"
    >

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        >

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/text_input_layout_title_fragment_new_data"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/edit_text_title_fragment_new_data"
                android:hint="Title"
                android:maxLines="1"
                android:singleLine="true"
                android:imeOptions="actionNext"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:textSize="18sp"
                android:textColor="@color/colorPrimary"
                android:background="@android:color/transparent"
                />

        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/text_input_layout_title_fragment_new_data"
            >

            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/edit_text_content_fragment_new_data"
                android:hint="Content"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:gravity="top"
                android:background="@android:color/transparent"
                />

        </android.support.design.widget.TextInputLayout>

    </RelativeLayout>

    <android.support.design.widget.FloatingActionButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/fab_save_fragment_new_data"
        android:layout_gravity="bottom|end"
        android:layout_margin="@dimen/fab_margin"
        app:srcCompat="@drawable/ic_save_white"
        tools:ignore="VectorDrawableCompat" />

</android.support.design.widget.CoordinatorLayout>
